Token create/delete API
